--- a/.github/workflows/snakegame.yml
+++ b/.github/workflows/snakegame.yml
@@ -1,32 +1,23 @@
 
-name: Snake Game
+name: Snake game
+
 on:
-  schedule:
-    - cron: "0 */5 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */5 * * *"
   workflow_dispatch:
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-
-      - uses: actions/checkout@v3
-      
-      - uses: Platane/snk@v3
+      # Snake Animation
+      - uses: Sutil/snk@master
         id: snake-gif
         with:
-          github_user_name: tonho991
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - run: git status
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/github-contribution-grid-snake2.svg
+          snake_color: 'blue'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
@@ -34,3 +25,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
